# transliterator

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  core.rs
cui/: main.rs
gui/: main.rs
tests/: main.rs
translator/: Cargo.toml  translator.rs
transliterator/: mod.rs
