[package]
name = "transliterator"
version = "0.0.1"
authors = ["DarkEld3r <stanislav.tkach@gmail.com>"]
repository = "https://github.com/DarkEld3r/transliterator.git"
homepage = "https://github.com/DarkEld3r/transliterator.git"
license = "MIT"
readme = "README.md"
description = "Translit convertor"
keywords = ["translit", "conrod"]

[[bin]]
name = "ctransliterator"
path = "cui/main.rs"

[[bin]]
name = "transliterator"
path = "gui/main.rs"

[dependencies.translator]
path = "translator"

[dependencies]
piston_window = "0.44.0"
conrod = "*"
find_folder = "*"
